plugins{
    id 'io.freefair.lombok' version '8.6'
    id 'nebula.lint' version "19.0.2"
}

allprojects {
    apply plugin: "nebula.lint"
    gradleLint {
        rules= []
    }
}

gradleLint { 
    rules= ['all-dependency']
    excludedRules= ['undeclared-dependency']
 }

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.freefair.lombok'

    sourceSets {
        test {
            java {
                srcDir 'src/java/test'
            }
        }
    }

    repositories {
        mavenCentral()
        maven { url 'https://jitpack.io' }
    }

    dependencies {

        // ActiveJ
        implementation 'com.github.Censseo.activej:activej:master-SNAPSHOT'
        implementation 'com.github.Censseo.activej:activej-inject:master-SNAPSHOT'
        implementation 'com.github.Censseo.activej:activej-config:master-SNAPSHOT'
        implementation 'com.github.Censseo.activej:activej-launcher:master-SNAPSHOT'
        implementation 'com.github.Censseo.activej:activej-launchers-common:master-SNAPSHOT'
        implementation 'com.github.Censseo.activej:activej-rpc:master-SNAPSHOT'
        implementation 'com.github.Censseo.activej:activej-datastream:master-SNAPSHOT'
        implementation 'com.github.Censseo.activej:activej-servicegraph:master-SNAPSHOT'
        implementation 'com.github.Censseo.activej:activej-workers:master-SNAPSHOT'
        implementation 'com.github.Censseo.activej:activej-serializer:master-SNAPSHOT'
        implementation 'com.github.Censseo.activej:activej-boot:master-SNAPSHOT'
        implementation 'com.github.Censseo.activej:activej-promise:master-SNAPSHOT'
        implementation 'com.github.Censseo.activej:activej-eventloop:master-SNAPSHOT'
        implementation 'com.github.Censseo.activej:activej-http:master-SNAPSHOT'
        implementation 'com.github.Censseo.activej:activej-common:master-SNAPSHOT'
        implementation 'com.github.Censseo.activej:activej-jmxapi:master-SNAPSHOT'
        implementation 'com.github.Censseo.activej:activej-net:master-SNAPSHOT'
        
        // Logback
        implementation 'ch.qos.logback:logback-classic:1.5.3'

        // Logging
        implementation 'org.slf4j:slf4j-api:2.0.12'

        // TODO: TBD
        implementation 'org.json:json:20240303'
        // implementation 'com.dslplatform:dsl-json:2.0.2'

        // JNI support for crypto libs PUFFERFISH2
        // implementation 'org.bytedeco:javacpp:1.5.9'

        // This dependency is used by the application.
        implementation 'com.google.guava:guava:31.1-jre'

        // Use JUnit Jupiter for testing.
        testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'

        // Use Mockito for testing.
        testImplementation 'org.mockito:mockito-junit-jupiter:5.3.1'
        testImplementation 'org.mockito:mockito-inline:5.2.0'
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    tasks.named('test') {
        // Use JUnit Platform for unit tests.
        useJUnitPlatform()
    }
}